# crewai

./: README.md
trip_planner/: _.huggingface.co.crt  agents.py  main.py  pyproject.toml  requirements.txt  tasks.py
trip_planner/triptools/: calculator_tool.py
