[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = "Simple ai trip planner"
authors = ["Joao Moura, Ben Qi"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "0.1.24"
unstructured = '==0.10.25'
pyowm = '3.3.0'
tools = "^0.1.9"
python-dotenv = ">1.0.0"

[[tool.poetry.source]]
name = "fpho"
url = "https://files.pythonhosted.org"
priority = "primary"

[tool.pyright]

userLibraryCodeForTypes = true
exlcude = [".cache"]

[tool.ruff]

select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"